--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,5 @@ after_success:
   - git init
   - git add -A
   - git commit -m "Travis CI Auto Builder"
-  - git push --quiet --force ${REPO_TOKEN}@https://github.com/Hinpc/www.git gh-pages
+  - git checkout -b gh-pages
+  - git push --force -u https://${REPO_TOKEN}@github.com/Hinpc/www.git gh-pages
